gdb/ 	Fix PR 10970, PR 12702. 	* linux-nat.c (linux_lwp_is_zombie): New function. 	(wait_lwp): Initialize status.  New variable prev_mask.  Block signals. 	Check for linux_lwp_is_zombie.  Use WNOHANG and sigsuspend.

gdb/testsuite/
	* gdb.threads/leader-exit.c: New file.
	* gdb.threads/leader-exit.exp: New file.